<resources>
    <string name="app_name">AcmeExplorer</string>
    <string name="title_activity_selected_trip">SelectedTripActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_password_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">Acceder con google</string>
    <string name="login_button_register_text">¿No tienes una cuenta? Regístrate</string>
    <string name="login_email_error_1">Por favor introduzca un correo electrónico.</string>
    <string name="login_email_error_2">Por favor introduzca una contraseña</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Debes verificar tu correo electrónico</string>
    <string name="login_verified_mail_ok">Enviar correo de verificación</string>
    <string name="login_verified_mail_error_sent">Correo de verificación enviado</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar el correo de verificación</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debes Actualizar Google Play Services antes de continuar</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">328464311712-95189hec6739f27d61vcm3ur2ho74bvu.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_password_confirmation_et_hint">Confirmar contraseña</string>
    <string name="register_button_mail_text">Registrarse</string>
    <string name="register_error_email">El correo electrónico introducido no es válido.</string>
    <string name="register_error_password">La contraseña no es válida.</string>
    <string name="register_password_dont_match">Ambas contraseñas deben coincidir.</string>
    <string name="register_created">El usuario se ha registrado correctamente</string>
    <string name="register_error_on_register">Hubo un error al registrar el usuario</string>
    <string name="register_error_password_min_chars">La contraseña debe tener al menos 6 caracteres</string>
    <string name="login_in_register_button_text">¿Ya tienes una cuenta? Logueate</string>
</resources>